pingService-deploy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: pingservice
spec:
  replicas: 1
  selector:
    matchLabels:
      tier: backend
  template:
    metadata:
      labels:
        app: pingserviceapp
        version: v1.4
        tier: backend
    spec:
      containers:
        - name: pingservice-container
          image: ping_service:1.4
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              path: /meta/health/live
              port: 80
            initialDelaySeconds: 30
            timeoutSeconds: 4
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /meta/health/ready
              port: 80
            initialDelaySeconds: 30
            timeoutSeconds: 4
            periodSeconds: 5
          resources:
            requests:
              memory: "96Mi"
              cpu: "0.1"
            limits:
              memory: "512Mi"
              cpu: "0.2"
