pingService-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pingservice-service
  labels:
    app: helloworldapp
spec:
  ports:
  - name: http
    port: 80
  selector:
    app: pingserviceapp
